<resources>
    <string name="app_name">BakingApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredient">Ingredient</string>
    <string name="steps">Steps</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="title_activity_fullscreen_video">FullscreenVideoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="full">Full</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
</resources>
