<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:text="@string/ingredient"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorAccent"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/ingredient_viewer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:text="@string/steps"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorAccent"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/steps_viewer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_300" />
    </LinearLayout>


</ScrollView>