<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipesFragment">

    <!-- TODO: Update blank fragment layout -->


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_viewer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>